[project]
name = "pythonproject1"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.121.0",
    "pandas>=2.3.3",
    "psycopg2>=2.9.11",
    "psycopg2-binary>=2.9.11",
    "redis>=7.0.1",
    "sqlalchemy>=2.0.44",
    "uuid>=1.30",
    "uvicorn>=0.38.0",
]
